Bug 54860 - [GTK] [REGRESSION] After r79130, spell tests did not work
Summary: [GTK] [REGRESSION] After r79130, spell tests did not work
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Linux
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-21 01:55 PST by Alejandro G. Castro
Modified: 2011-02-21 06:30 PST (History)
2 users (show)

See Also:


Attachments
Proposed patch (3.85 KB, patch)
2011-02-21 02:04 PST, Alejandro G. Castro
xan.lopez: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Alejandro G. Castro 2011-02-21 01:55:24 PST
Apparently the dicts are not correctly set during initialization.

http://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug/r79193%20(19546)/results.html
Comment 1 Alejandro G. Castro 2011-02-21 02:04:08 PST
Created attachment 83139 [details]
Proposed patch
Comment 2 Xan Lopez 2011-02-21 03:11:58 PST
Comment on attachment 83139 [details]
Proposed patch

I think you are missing carrying the setting in webkit_web_settings_copy, but looks good otherwise.
Comment 3 Xan Lopez 2011-02-21 03:14:27 PST
(In reply to comment #2)
> (From update of attachment 83139 [details])
> I think you are missing carrying the setting in webkit_web_settings_copy, but looks good otherwise.

Nevermind, it's there but I didn't see it.
Comment 4 Alejandro G. Castro 2011-02-21 06:30:25 PST
Landed http://trac.webkit.org/changeset/79215