2011-02-21  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Xan Lopez.

        [GTK] [REGRESSION] After r79130, spell tests did not work
        https://bugs.webkit.org/show_bug.cgi?id=54860

        * WebCoreSupport/TextCheckerClientEnchant.cpp:
        (WebKit::TextCheckerClientEnchant::checkSpellingOfString): Avoided
        freeing the default PangoLanguage.
        * webkit/webkitwebview.cpp:
        (webkit_web_view_update_settings): Initialized list of dictionaries.

Canonical link: https://commits.webkit.org/69142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79215 268f45cc-cd09-0410-ab3c-d52691b4dbfc